<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:minHeight="200dp"
    android:padding="16dp">

    <!-- media info section -->
    <ImageView
        android:id="@+id/detail_dialog_titleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dialog_titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_dialog_titleText"
        app:tint="@color/gray_700"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/detail_dialog_titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_dialog_titleIcon"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_title" />

    <TextView
        android:id="@+id/detail_dialog_pathText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_titleText"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_titleText" />

    <TextView
        android:id="@+id/detail_dialog_sizeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_pathText"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_pathText" />

    <TextView
        android:id="@+id/detail_dialog_viewCountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_pathText"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_sizeText" />

    <!-- last modified date section -->
    <ImageView
        android:id="@+id/detail_dialog_modifiedDateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dialog_modifiedDateText"
        app:layout_constraintEnd_toEndOf="@+id/detail_dialog_titleIcon"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_titleIcon"
        app:layout_constraintTop_toTopOf="@+id/detail_dialog_modifiedDateText"
        app:tint="@color/gray_700"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/detail_dialog_modifiedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_dialog_modifiedDateIcon"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_viewCountText" />

    <!-- tag section -->
    <ImageView
        android:id="@+id/detail_dialog_tagIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_label"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dialog_tagGroup"
        app:layout_constraintEnd_toEndOf="@+id/detail_dialog_modifiedDateIcon"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_modifiedDateIcon"
        app:layout_constraintTop_toTopOf="@+id/detail_dialog_tagGroup"
        app:tint="@color/gray_700"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/detail_dialog_noTagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_dialog_no_tags"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dialog_tagIcon"
        app:layout_constraintStart_toStartOf="@+id/detail_dialog_modifiedDateText"
        app:layout_constraintTop_toTopOf="@+id/detail_dialog_tagIcon" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/detail_dialog_tagGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_dialog_tagIcon"
        app:layout_constraintTop_toBottomOf="@+id/detail_dialog_modifiedDateText"
        app:singleSelection="true" />

    <!-- top bar -->
    <TextView
        android:id="@+id/detail_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/detail_dialog_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dialog_editTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_dialog_editTag" />

    <Button
        android:id="@+id/detail_dialog_addTag"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_dialog_add_tag"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/detail_dialog_editTag"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/detail_dialog_editTag"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_dialog_edit_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>